# ml-breast-cancer-prediction

./: .dockerignore  .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml
notebooks/: best_model_V1_Baseline.pth  best_model_V2_Stronger_FC.pth  best_model_V3_Medium_FC.pth  best_model_V4_Add_Conv.pth  best_model_V5_Scheduler.pth  best_model_V6_Augmentation.pth  ml-breast-cancer-prediction.ipynb
src/: best_model.pth  final_model.pth  predict.py  train.py
tests/: test_fly_io.py  test_predict.py
